# application/serializers/UserSerializer.js
@@ -2,17 +2,24 @@ const serializeUser = (user) => ({
     id: user.id,
     email: user.email,
     firstName: user.firstName,
-    lastName: user.lastName
-  });
+    lastName: user.lastName,
+    rol: user.rol,
+    location: user.location,
+    interests: user.interests,
+    profilePictureUrl: user.profilePictureUrl,
+    subscription: user.subscription,
+    subscriptionExpirationDate: user.subscriptionExpirationDate,
+    favoriteCourses: user.favoriteCourses,
+    coursesHistory: user.coursesHistory
+});
   
-  module.exports = (data) => {
+module.exports = (data) => {
     if (!data) {
-      throw new Error("Expect data to be not undefined nor null");
+        throw new Error("Expect data to be not undefined nor null");
     }
-  
+    
     if (Array.isArray(data)) {
-      return data.map(serializeUser);
+        return data.map(serializeUser);
     }
-  
     return serializeUser(data);
-  };
+};
